# vidux

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  capture.cpp  capture.hpp  depend.inc  install-cv.sh  main.cpp  main.hpp  opencv_test  vidux  vidux-capture-main.cpp  vidux-capture-main.hpp  vidux-selector-main.cpp  vidux-selector-main.hpp  vidux.sh
capture/: capture.cpp  capture.hpp
glade/: vidux-capture-gui.glade  vidux-mixer-gui.glade
logger/: logger.cpp  logger.hpp
vidux-capture-gui/: capture_gui.cpp  capture_gui.hpp
